--- a/classification/examples/examples_indices/3_Compare_clusterings_rand_index.ipynb
+++ b/classification/examples/examples_indices/3_Compare_clusterings_rand_index.ipynb
@@ -2,6 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1edbdea08c0394e3",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Adjusted Random Score\n",
     "\n",
@@ -10,38 +14,43 @@
     "The Rand Index computes a similarity measure between two clusterings by considering all pairs of samples and counting pairs that are assigned in the same or different clusters in the predicted and true clusterings.'\n",
     "\n",
     "How different are the clusterings with different algorithms?"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1edbdea08c0394e3"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f9eede52ca19df66",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2023-10-13T10:23:22.766766100Z",
      "start_time": "2023-10-13T10:23:22.625502200Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "import warnings\n",
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), \"../../..\")) # Determine the project's root directory\n",
+    "sys.path.append(PROJECT_ROOT) # Add the project root directory to Python's module search path.\n",
     "\n",
     "from sklearn.metrics.cluster import adjusted_rand_score\n",
     "\n",
     "from classification.clustering.clustering_algorithms import *\n",
     "from classification.clustering.config_clustering import *\n",
     "from classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
-    "from syngrid.GridGenerator import GridGenerator"
+    "from pylovo.GridGenerator import GridGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
+   "id": "12141a8639416cf5",
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -49,22 +58,25 @@
     "pg = gg.pgr\n",
     "\n",
     "warnings.filterwarnings('ignore')"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "12141a8639416cf5"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "id": "1a99fd17d066d7ff",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-13T10:24:13.233260500Z",
+     "start_time": "2023-10-13T10:24:06.603666100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Database connection is constructed. \n",
-      "Database connection closed.\n"
+      "Database connection is constructed. \n"
      ]
     }
    ],
@@ -76,45 +88,45 @@
     "    df_parameters_of_grids=df_parameters_of_grids,\n",
     "    list_of_clustering_parameters=LIST_OF_CLUSTERING_PARAMETERS,\n",
     "    n_clusters=N_CLUSTERS_KMEANS)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-13T10:24:13.233260500Z",
-     "start_time": "2023-10-13T10:24:06.603666100Z"
-    }
-   },
-   "id": "1a99fd17d066d7ff"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "id": "e2be1d32e3c6b0af",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-13T10:24:14.609046700Z",
+     "start_time": "2023-10-13T10:24:13.233260500Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "df_parameters_of_grids_kmedoids, representative_networks_kmedoids = kmedoids_clustering(\n",
     "    df_parameters_of_grids=df_parameters_of_grids,\n",
     "    list_of_clustering_parameters=LIST_OF_CLUSTERING_PARAMETERS,\n",
     "    n_clusters=N_CLUSTERS_KMEDOID)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-13T10:24:14.609046700Z",
-     "start_time": "2023-10-13T10:24:13.233260500Z"
-    }
-   },
-   "id": "e2be1d32e3c6b0af"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
+   "id": "initial_id",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-13T10:24:14.687119100Z",
+     "start_time": "2023-10-13T10:24:14.611051400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "converged: True\n",
-      "no of iterations 13\n"
+      "no of iterations 15\n"
      ]
     }
    ],
@@ -124,119 +136,120 @@
     "    list_of_clustering_parameters=LIST_OF_CLUSTERING_PARAMETERS,\n",
     "    n_clusters=N_CLUSTERS_GMM)\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-13T10:24:14.687119100Z",
-     "start_time": "2023-10-13T10:24:14.611051400Z"
-    }
-   },
-   "id": "initial_id"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
+   "id": "7eb1bbd3cdb5bb56",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-13T10:24:14.748681900Z",
+     "start_time": "2023-10-13T10:24:14.691123Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "0.7123686322374309"
+      "text/plain": [
+       "0.4829840359942837"
+      ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "adjusted_rand_score(df_parameters_of_grids_kmeans['clusters'], df_parameters_of_grids_kmedoids['clusters'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-13T10:24:14.748681900Z",
-     "start_time": "2023-10-13T10:24:14.691123Z"
-    }
-   },
-   "id": "7eb1bbd3cdb5bb56"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "id": "6f7a4353eff9834d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-13T10:24:22.057094600Z",
+     "start_time": "2023-10-13T10:24:22.030568Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "0.5001509820035602"
+      "text/plain": [
+       "0.5556802692857316"
+      ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "adjusted_rand_score(df_parameters_of_grids_kmeans['clusters'], df_parameters_of_grids_gmm['clusters'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-13T10:24:22.057094600Z",
-     "start_time": "2023-10-13T10:24:22.030568Z"
-    }
-   },
-   "id": "6f7a4353eff9834d"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
+   "id": "cfaf39e33401a31c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-13T10:24:34.712174600Z",
+     "start_time": "2023-10-13T10:24:34.499288300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "0.4070792653156588"
+      "text/plain": [
+       "0.39000128491648456"
+      ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "adjusted_rand_score(df_parameters_of_grids_kmedoids['clusters'], df_parameters_of_grids_gmm['clusters'])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-13T10:24:34.712174600Z",
-     "start_time": "2023-10-13T10:24:34.499288300Z"
-    }
-   },
-   "id": "cfaf39e33401a31c"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "15e2ada8231163e9",
    "metadata": {
     "collapsed": false
    },
-   "id": "15e2ada8231163e9"
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "707ab886c1afad52ac8d551451251c4de712c6918604af17f6b2c80a6a3c23b9"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.12.3 ('pylovo-env-3-12': venv)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
