fix: type bug is fixed in notebooks

--- a/classification/examples/examples_clustering/1_0_kmedoids_representative_grids.ipynb
+++ b/classification/examples/examples_clustering/1_0_kmedoids_representative_grids.ipynb
@@ -417,7 +417,7 @@
    "outputs": [],
    "source": [
     "plot_with_generic_coordinates(plz, bcid=bcid, kcid=kcid)\n",
-    "plz_str = (representative_networks.iloc[4]['plz'])"
+    "plz_str = int(representative_networks.iloc[4]['plz'])"
    ]
   },
   {
