Refactored configuration system: - Replaced Python-based config files with YAML files. - Added config_loader.py to handle YAML-based configuration loading. - Updated import paths in all relevant Python scripts and Jupyter notebooks.

--- a/classification/examples/examples_clustering/2_1_kmeans_clusters.ipynb
+++ b/classification/examples/examples_clustering/2_1_kmeans_clusters.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "\n",
     "from classification.clustering.clustering_algorithms import kmeans_clustering\n",
-    "from classification.clustering.config_clustering import *\n",
+    "from classification.config_loader import *\n",
     "from classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
     "from plotting.plot_networks import *\n",
     "from plotting.plotting_classification import plot_percentage_of_clusters, \\\n",
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
