--- a/classification/examples/examples_indices/3_Compare_clusterings_rand_index.ipynb
+++ b/classification/examples/examples_indices/3_Compare_clusterings_rand_index.ipynb
@@ -40,7 +40,7 @@
     "from sklearn.metrics.cluster import adjusted_rand_score\n",
     "\n",
     "from classification.clustering.clustering_algorithms import *\n",
-    "from classification.clustering.config_clustering import *\n",
+    "from classification.config_loader import *\n",
     "from classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
     "from pylovo.GridGenerator import GridGenerator"
    ]
@@ -248,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
