--- a/classification/examples/examples_indices/2_DB_index.ipynb
+++ b/classification/examples/examples_indices/2_DB_index.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-19T07:07:08.861029100Z",
@@ -32,7 +32,7 @@
     "\n",
     "\n",
     "\n",
-    "from classification.config_classification import NO_OF_CLUSTERS_ALLOWED\n",
+    "from classification.config_loader import NO_OF_CLUSTERS_ALLOWED\n",
     "from plotting.plotting_classification import plot_db_index_for_clustering_algos\n",
     "\n",
     "warnings.filterwarnings('ignore')"
@@ -139,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
