Update postcode_result and postcode tables

--- a/notebook_tutorials/1_map_visualization_examples.ipynb
+++ b/notebook_tutorials/1_map_visualization_examples.ipynb
@@ -89,7 +89,7 @@
     }
    },
    "source": [
-    "postcode_gdf = pg.get_geo_df(table=\"postcode_result\", postcode_result_id=plz)\n",
+    "postcode_gdf = pg.get_geo_df(table=\"postcode_result\", postcode_result_plz=plz)\n",
     "fig, ax = plt.subplots()\n",
     "ax = postcode_gdf.boundary.plot(ax=ax, figsize=(10, 10), linewidth=2, )\n",
     "cx.add_basemap(ax, crs=postcode_gdf.crs.to_string(), source=cx.providers.OpenStreetMap.Mapnik)\n",
