--- a/notebook_tutorials/1_map_visualization_examples.ipynb
+++ b/notebook_tutorials/1_map_visualization_examples.ipynb
@@ -499,7 +499,12 @@
     }
    },
    "source": [
-    "trafo_gdf = pg.get_geo_df(table=\"transformer_positions\", plz=int(plz), bcid=bcid)"
+    "trafo_gdf = pg.get_geo_df_join(\n",
+    "    [\"geom\"],\n",
+    "    \"transformer_positions tp\", \"grid_result gr\",\n",
+    "    (\"tp.grid_result_id\", \"gr.grid_result_id\"),\n",
+    "    plz=int(plz), bcid=bcid\n",
+    ")"
    ],
    "outputs": [],
    "execution_count": 13
