replace config_version.py by config_version.yaml; move config_loader.py to /pylovo

--- a/classification/examples/examples_indices/1_CH_index.ipynb
+++ b/classification/examples/examples_indices/1_CH_index.ipynb
@@ -31,7 +31,7 @@
     "sys.path.append(PROJECT_ROOT) # Add the project root directory to Python's module search path.\n",
     "\n",
     "\n",
-    "from classification.config_loader import NO_OF_CLUSTERS_ALLOWED\n",
+    "from pylovo.config_loader import NO_OF_CLUSTERS_ALLOWED\n",
     "from classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
     "from plotting.plotting_classification import plot_ch_index_for_clustering_algos\n",
     "\n",
