--- a/classification/examples/examples_clustering/1_1_kmedoids_clusters.ipynb
+++ b/classification/examples/examples_clustering/1_1_kmedoids_clusters.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "\n",
     "from classification.clustering.clustering_algorithms import kmedoids_clustering\n",
-    "from classification.config_loader import *\n",
+    "from pylovo.config_loader import *\n",
     "from classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
     "from plotting.plot_networks import *\n",
     "from plotting.plotting_classification import plot_percentage_of_clusters, \\\n",
