Change directory names for source code and executable scripts

--- a/notebook_tutorials/2_0_LV_pandapower_network.ipynb
+++ b/notebook_tutorials/2_0_LV_pandapower_network.ipynb
@@ -20,7 +20,7 @@
     "import warnings\n",
     "\n",
     "from plotting.plot_networks import *\n",
-    "from pylovo.GridGenerator import GridGenerator\n",
+    "from src.GridGenerator import GridGenerator\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ],
