--- a/classification/examples/examples_indices/2_DB_index.ipynb
+++ b/classification/examples/examples_indices/2_DB_index.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "\n",
     "\n",
-    "from pylovo.config_loader import NO_OF_CLUSTERS_ALLOWED\n",
+    "from src.config_loader import NO_OF_CLUSTERS_ALLOWED\n",
     "from plotting.plotting_classification import plot_db_index_for_clustering_algos\n",
     "\n",
     "warnings.filterwarnings('ignore')"
