Rename modules according to PEP 8

--- a/notebook_tutorials/1_map_visualization_examples.ipynb
+++ b/notebook_tutorials/1_map_visualization_examples.ipynb
@@ -41,7 +41,7 @@
     "from matplotlib import pyplot as plt\n",
     "from shapely import linestrings\n",
     "\n",
-    "from src.GridGenerator import GridGenerator\n",
+    "from src.grid_generator import GridGenerator\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
