--- a/notebook_tutorials/4_basic_plotting.ipynb
+++ b/notebook_tutorials/4_basic_plotting.ipynb
@@ -30,7 +30,7 @@
     "import warnings\n",
     "\n",
     "from plotting.plot_for_plz import *\n",
-    "from src.GridGenerator import GridGenerator\n",
+    "from src.grid_generator import GridGenerator\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
