--- a/src/classification/examples/examples_correlation_and_factor_analysis/1_2_correlation_matrix.ipynb
+++ b/src/classification/examples/examples_correlation_and_factor_analysis/1_2_correlation_matrix.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "from src.classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
+    "from src.classification.database_communication.database_communication import DatabaseCommunication\n",
     "\n",
     "dc = DatabaseCommunication()\n",
     "df_parameters_of_grids = dc.get_clustering_parameters_for_classification_version()"
