--- a/src/classification/examples/examples_indices/3_Compare_clusterings_rand_index.ipynb
+++ b/src/classification/examples/examples_indices/3_Compare_clusterings_rand_index.ipynb
@@ -40,8 +40,8 @@
     "from sklearn.metrics.cluster import adjusted_rand_score\n",
     "\n",
     "from src.config_loader import *\n",
-    "from src.classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
-    "from src.GridGenerator import GridGenerator"
+    "from src.classification.database_communication.database_communication import DatabaseCommunication\n",
+    "from src.grid_generator import GridGenerator"
    ]
   },
   {
