--- a/notebook_tutorials/debug_nodetonode.ipynb
+++ b/notebook_tutorials/debug_nodetonode.ipynb
@@ -17,7 +17,7 @@
     "from plotting.plot_networks import draw_tree_network\n",
     "from plotting.plot_networks import draw_tree_network_improved_spacing\n",
     "from plotting.plot_networks import plot_simple_grid\n",
-    "from src.GridGenerator import GridGenerator"
+    "from src.grid_generator import GridGenerator"
    ]
   },
   {
