--- a/src/classification/examples/examples_clustering/2_0_kmeans_representative_grids.ipynb
+++ b/src/classification/examples/examples_clustering/2_0_kmeans_representative_grids.ipynb
@@ -26,10 +26,10 @@
     "\n",
     "from src.classification.clustering.clustering_algorithms import kmeans_clustering\n",
     "from src.config_loader import *\n",
-    "from src.classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
+    "from src.classification.database_communication.database_communication import DatabaseCommunication\n",
     "from plotting.plot_networks import *\n",
     "from plotting.plotting_classification import plot_radar_graph\n",
-    "from src.GridGenerator import GridGenerator\n",
+    "from src.grid_generator import GridGenerator\n",
     "\n",
     "# import pandapower as pp\n",
     "\n",
