--- a/src/classification/examples/examples_correlation_and_factor_analysis/1_0_factor_analysis.ipynb
+++ b/src/classification/examples/examples_correlation_and_factor_analysis/1_0_factor_analysis.ipynb
@@ -40,7 +40,7 @@
     "from factor_analyzer.factor_analyzer import calculate_bartlett_sphericity\n",
     "from factor_analyzer.factor_analyzer import calculate_kmo\n",
     "\n",
-    "from src.classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
+    "from src.classification.database_communication.database_communication import DatabaseCommunication\n",
     "from plotting.plotting_classification import plot_factor_analysis, get_parameters_for_clustering\n",
     "\n",
     "warnings.filterwarnings('ignore')"
