--- a/src/classification/examples/examples_correlation_and_factor_analysis/1_1_explained_variance_eigen_decomposition.ipynb
+++ b/src/classification/examples/examples_correlation_and_factor_analysis/1_1_explained_variance_eigen_decomposition.ipynb
@@ -34,7 +34,7 @@
     "sys.path.append(PROJECT_ROOT) # Add the project root directory to Python's module search path.\n",
     "\n",
     "\n",
-    "from src.classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
+    "from src.classification.database_communication.database_communication import DatabaseCommunication\n",
     "from plotting.plotting_classification import plot_eigendecomposition\n",
     "\n",
     "warnings.filterwarnings('ignore')"
