--- a/src/classification/examples/examples_indices/1_CH_index.ipynb
+++ b/src/classification/examples/examples_indices/1_CH_index.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "\n",
     "from src.config_loader import NO_OF_CLUSTERS_ALLOWED\n",
-    "from src.classification.database_communication.DatabaseCommunication import DatabaseCommunication\n",
+    "from src.classification.database_communication.database_communication import DatabaseCommunication\n",
     "from plotting.plotting_classification import plot_ch_index_for_clustering_algos\n",
     "\n",
     "warnings.filterwarnings('ignore')"
